# FALZH

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: config.py
app/ai/: __init__.py  orchestrator.py  providers.py  tool_schemas.py
app/api/: routes.py
app/database/: supabase.py
app/models/: domain.py
app/services/: container.py  conversation_service.py  group_message_service.py  trip_indexing.py
app/tools/: handlers.py
app/utils/: emoji.py  phone.py
app/whatsapp/: parser.py  trip_selection.py
prompts/: falsa_info.md  group_trip_extraction.md  system.md  system_driver.md  system_new_user.md  system_passenger.md
scripts/: run_migration.py
supabase/migrations/: 202605210001_initial_schema.sql  202606020001_supabase_jina_vectors.sql  202606170001_driver_customer_identity.sql  202607010001_customer_phone_number.sql  202607120001_group_trip_support.sql  202607130001_driver_name_search.sql  202607140001_driver_message_card.sql  202607160001_make_remote_jid_nullable.sql  202607160002_update_rpc_phone_number.sql  202607210001_nullable_seats.sql
tests/: conftest.py  test_ai_orchestrator.py  test_conversation_service.py  test_emoji.py  test_group_message_service.py  test_phone.py  test_tools.py  test_trip_selection.py
